infrastructures/k8s/manifests/ingress/autoecole-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: autoecole-ingress
  namespace: staging
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
spec:
  rules:
    - http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: keycloak-service
                port:
                  number: 8080
          - path: /school
            pathType: Prefix
            backend:
              service:
                name: school-service
                port:
                  number: 8080
