infrastructures/k8s/manifests/ingress/minio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
  namespace: staging
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          # MinIO Console
          - path: /minio-console(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: minio-service
                port:
                  number: 9001
          # MinIO API
          - path: /minio(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: minio-service
                port:
                  number: 9000
